# vision

./: README.md  checkssl.py  main.py  notes.txt  pyproject.toml  pytorchexperiments.py  requirements.txt  setup.py
hellofastai/: colab-problems.txt  hello.py  mps-hello.py  mps-notes.txt
hellotimm/: main.py
models/: convert.py
notebooks/: IMAGENETTE.ipynb  bears.ipynb  first.ipynb  kaggle-upload-model.txt  stocks.ipynb
stash/: kaggle.txt  monkeypatch.py  notes.txt
stash/hellofastai/: dataload.py  hello-fastai-cpu.py  kaggle-hello.py  mps-bench.py  mps-hello.py  mps-notes.txt  mps-train-bench.py  notes.txt  predict.py
stash/hellonats/: async.py  sync_nats.py
stash/hellotimm/: main.py  notes.txt  vit-example.py
stash/pytorch/: pytorch-candlestick-classifier.py  pytorch-mps-setup.py  pytorch-visualizers.py
stocks/: stocks.py
